tests/NormalTests/paczka1/small_fuzzy/43134151.err
Error in line 9: q2ynk Sh12 10,4
Error in line 3: S19 S108 75,9
Error in line 13: S19 A115 969,3
